<?xml version="1.0" encoding="utf-8"?>
<!--
 *******************************************************************************
 * Copyright (c) 2010 Eugene Vorobkalo.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the GNU Public License v2.0
 * which accompanies this distribution, and is available at
 * http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 * 
 * Contributors:
 *     Eugene Vorobkalo - initial API and implementation
 ******************************************************************************/
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:orientation="vertical">
	<ListView android:id="@android:id/list"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:layout_weight="1"
		android:scrollbarStyle="insideInset"
		android:fastScrollEnabled="true"
		android:textFilterEnabled="true" />
		
	<TextView android:id="@id/android:empty"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_weight="1"
		android:gravity="center"
		android:text="@string/msg_NoClient" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_weight="0" android:gravity="top"
		android:background="@drawable/list_bar"
		android:paddingTop="2px"
		android:paddingBottom="2px">
		<ToggleButton  android:id="@+id/tbClDoc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:textOn="@string/lb_all"
			android:textOff="@string/lb_doc"/>
</LinearLayout>
</LinearLayout>