<?xml version="1.0" encoding="utf-8"?>
<!--
 *******************************************************************************
 * Copyright (c) 2010 Eugene Vorobkalo.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the GNU Public License v2.0
 * which accompanies this distribution, and is available at
 * http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 * 
 * Contributors:
 *     Eugene Vorobkalo - initial API and implementation
 ******************************************************************************/
 -->
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical">
	
	<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1">
		<TextView android:layout_height="wrap_content" android:id="@+id/tvTransferLog" android:layout_width="fill_parent"/>
	</ScrollView>

	<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical" android:background="@drawable/list_bar" android:layout_weight="0" android:padding="3px">
		<TextView android:text="@string/lb_transfer_type" android:layout_height="wrap_content" android:layout_width="fill_parent" android:paddingLeft="10px" android:textColor="#FFFFFF"/>
		<Spinner android:id="@+id/spNetType" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingTop="10px"/> 
		<LinearLayout android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
			<Button android:text="@string/lb_export" android:id="@+id/btExport" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
			<Button android:text="@string/lb_import" android:id="@+id/btImport" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
		</LinearLayout>
	</LinearLayout>
	

</LinearLayout>
